I corrected the javascript refference and the color contrast ratio for both pages (index and temples.html)

--- a/styles/base.css
+++ b/styles/base.css
@@ -86,7 +86,7 @@ main {
 }
 
 .dev-src-link:hover {
-    color:rgb(225, 191, 0);
+    color:rgb(0, 0, 0);
     transition: 1000ms;
 }
 
@@ -119,6 +119,18 @@ footer p {
     margin: .5rem;
     font-size: 1.2rem;
     color: rgb(185, 185, 185);
+}
+
+
+footer p a {
+    text-decoration: none;
+    color: rgb(255, 177, 122,1);
+    font-weight: bold;
+    transition: 1000ms;
+}
+footer p a:hover {
+    color: rgb(255, 255, 0);
+    transition: 1000ms;
 }
 
 
